gcc/testsuite/rust/rustc/ui/parser/lifetime-in-pattern.rs
fn test(&'a str) {
// { dg-error "" "" { target *-*-* } .-1 }
// { dg-error "" "" { target *-*-* } .-2 }
}

fn main() {
}

